# cpp-zombies

./: CMakeLists.txt  README.md  build.sh
include/: config.h.in
src/lib/: CMakeLists.txt  main.h  src.h
src/lib/integration/game/map/: mapgen.cpp
src/lib/main/: main.cpp  src.cpp
src/lib/main/game/map/: coords.cpp  coords.h  map.cpp  map.h  mapgen.cpp  mapgen.h  region.cpp  region.h
src/lib/main/ui/: ui.h  window.h
src/lib/main/ui/curses/: ui.cpp  window.cpp  window.h
src/lib/test/: dummy-test.cpp  test.cpp
src/lib/test/game/map/: mapgen-test.cpp
src/main/: CMakeLists.txt
src/main/main/: main.cpp
