CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (ZOMBIES)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
INCLUDE("cmake/CXX11.cmake")
INCLUDE("cmake/CppcheckTargets.cmake")

SET (ZOMBIES_VERSION_MAJOR 1)
SET (ZOMBIES_VERSION_MINOR 0)
SET (ZOMBIES_VERSION_MICRO 0)

FIND_PACKAGE(cppcheck)
FIND_PACKAGE(PkgConfig)
FIND_PACKAGE(Boost COMPONENTS system unit_test_framework REQUIRED)

check_for_cxx11_compiler(CXX11_COMPILER)
IF (CXX11_COMPILER)
    enable_cxx11()
ENDIF()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -pedantic-errors -Wextra -Werror -Wno-unused-parameter")
endif()

CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/include/config.h.in" "${PROJECT_BINARY_DIR}/include/config.h")

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ENABLE_TESTING()

ADD_SUBDIRECTORY("src/lib")
ADD_SUBDIRECTORY("src/main")
